--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
        <nav>
          <span><a href="/">Emma Arakelyan</a></span>
           <ul>
-            <li><a href="/">Portfolio <i aria-hidden="true" class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="https://emmaos.gitbook.io/portfolio/" target="_blank">Portfolio <i class="fas fa-external-link" aria-hidden="true"></i></a></li>
             <li><a href="/library">My library</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
