--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         </nav>
       </header>
      <div class="wrapper">
-      <section id="homepage">
+      <section id="defaultpage">
           
       {{ content }}
         
