--- a/bot/peekobot.css
+++ b/bot/peekobot.css
@@ -5,6 +5,7 @@
     padding: 1rem 1rem 2rem 1rem;
     height: var(--peekobot-height);
     position: relative;
+    margin: 1em 15em;
 }
 #peekobot-inner {
     height: 100%;
