--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,14 +15,14 @@ body {
 a {
   text-decoration: none;
   border-bottom: 1px solid;
-  color: #8B786D;
+  color: #8C5E58;
   font-weight: 600;
   transition: 0.3s;
   transition-timing-function: linear;
 }
 
 a:hover {
-  color: #FBAF00;
+  color: #FF9811;
 }
 
 .wrapper {
