--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,7 +16,7 @@ a {
   text-decoration: none;
   border-bottom: 1px solid;
   text-shadow: 1px 1px 1px #fff;
-  color: #fcf5f1;
+  color: #0A014F;
   font-weight: 600;
   transition: 0.3s;
   transition-timing-function: linear;
